# tokenizer

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/rapidjson-master/: CMakeLists.txt
lib/utfcpp/: CMakeLists.txt
lib/utfcpp/include/utf8cpp/utf8/: unchecked.h
src/: config.h  main.cpp
src/data_set/: Entry.h
src/data_set/file/: DataFile.cpp  DataFile.h  JsonFile.cpp  JsonFile.h  MetadataFile.cpp  MetadataFile.h
src/files/: CandidatesFile.cpp  CandidatesFile.h  DataFile.cpp  DataFile.h  JsonFile.cpp  JsonFile.h  MetadataFile.cpp  MetadataFile.h  SolutionFile.cpp  SolutionFile.h  TokenFile.cpp  TokenFile.h
src/tokenizer/: GetTokens.cpp  GetTokens.h  LomaxDist.cpp  LomaxDist.h  Token.cpp  Token.h  TokenGenerator.cpp  TokenGenerator.h  Trie.cpp  Trie.h
src/utils/: Multithread.cpp  Multithread.h
